# simpleFA

./: .gitmodules  CMakeLists.txt
src/: main.cpp
